--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,10 @@
     <img src="/images/close.png" alt="Close" class="close" id="img-close">
   </div>
 
+  <div class="wrap-recommend">
+    <ul id="recommend" />
+  </div>
+
   <div class="wrap-content">
     <ul id="results" />
   </div>
