--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,10 @@
     <ul id="recommend" />
   </div>
 
+  <!-- <div class="wrap-recommend">
+    <ul id="recommendkey" />
+  </div> -->
+
   <div class="wrap-content">
     <ul id="results" />
   </div>
