--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
 <body>
 
   <div class="wrap-search">
-    <input type="text" placeholder="Search by custom search engine..." id="input-search">
+    <input type="text" placeholder="Input your key search here..." id="input-search">
     <img src="/images/search.png" alt="Search" class="search" id="img-search">
     <img src="/images/close.png" alt="Close" class="close" id="img-close">
   </div>
@@ -48,7 +48,7 @@
     <div></div>
   </div>
 
-  <img src="/images/cse.png" alt="Custom Searc Engine" class="cse" id="img-cse">
+  <img src="/images/cse.png" alt="Fshare Search" class="cse" id="img-cse">
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/javascripts/main.js"></script>
