--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,15 +25,17 @@
   </div>
 
   <div class="wrap-recommend">
-    <ul id="recommend" />
+    <ul id="recommend" /></ul>
+    
   </div>
 
-  <!-- <div class="wrap-recommend">
-    <ul id="recommendkey" />
-  </div> -->
 
   <div class="wrap-content">
     <ul id="results" />
+  </div>
+
+<div class="wrap-recommend">
+    <ul id="recommendkey" />
   </div>
 
   <div class="page" id="pagination">
