--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -106,6 +106,38 @@ h1, h2, h3, h4, h5, h6 {
 	text-decoration: none;	
 }
 
+.wrap-recommendkey ul {
+	padding-left: 20px;
+	padding-right: 20px;
+	width: 35%;
+	float: left;
+	
+}
+.wrap-recommendkey li.total {
+	color: rgb(88, 88, 88);
+	margin-top: 20px;
+}
+.wrap-recommendkey li.item {
+	margin-top: 25px;
+	
+}
+.wrap-recommendkey li.item a.title {
+	font-weight: 900;
+}
+.wrap-recommendkey li.item div.snippet {
+	margin-top: 5px;
+	margin-bottom: 15px;
+}
+.wrap-recommendkey li.item img {
+	width: 90px;
+	height: 90px;
+}
+
+.wrap-recommendkey a {
+	color: #0025f5;
+	text-decoration: none;	
+}
+
 .loader, img.cse {
 	position: fixed;
 	left: 50%;
