--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@ body {
 	font-size: 16px;
 	font-family: 'Quicksand', sans-serif;
 	margin: auto;
-	width: 80%;
+	width: 95%;
 	padding-top: 30px;
 	padding-bottom: 30px;
 }
@@ -27,13 +27,15 @@ h1, h2, h3, h4, h5, h6 {
 .wrap-search input {
 	position: relative;
 	box-sizing : border-box;
-	width: 100%;
+	width: 89%;
+	float: right;
 	padding: 8px 20px;
 	border-radius: 50px;
 	border: 2px solid rgb(88, 88, 88);
 	outline: none;
 	font-size: 15px;
 	font-family: 'Quicksand', sans-serif;
+	margin-top: 5px;	
 }
 .wrap-search img {
 	position: absolute;
@@ -43,17 +45,23 @@ h1, h2, h3, h4, h5, h6 {
 	width: 20px;
 	height: 20px;
 	cursor: pointer;
+	margin-top: 25px;
+
+
 }
 .wrap-search img.close {
 	right: 45px;
 	display: none;
 }
 
+
+
 .wrap-content ul {
 	padding-left: 10px;
-	padding-right: 10px;
-	width: 55%;
+	padding-right: 10px;	
+	width: 90%;
 	float: left;
+	margin-left: 11%;			
 }
 .wrap-content li.total {
 	color: rgb(88, 88, 88);
@@ -78,13 +86,26 @@ h1, h2, h3, h4, h5, h6 {
 .wrap-recommend ul {
 	padding-left: 20px;
 	padding-right: 20px;
-	width: 35%;
+	width: 40%;
 	float: right;
+	margin-top: 5%;
 }
 .wrap-recommend li.total {
 	color: rgb(88, 88, 88);
 	margin-top: 20px;
+	
 }
+
+.wrap-recommend p.hotlink {
+	color: rgb(221, 14, 14);
+	margin-top: 10px;
+	text-align:center;	
+	font-size: 17px;
+	float: right;
+	width: 89%;
+	
+}
+
 .wrap-recommend li.item {
 	margin-top: 25px;
 	
@@ -109,8 +130,11 @@ h1, h2, h3, h4, h5, h6 {
 .wrap-recommendkey ul {
 	padding-left: 20px;
 	padding-right: 20px;
-	width: 35%;
+	width: 40%;
 	float: left;
+	margin-top: 5%;
+	margin-left: 10%;	
+}
 	
 }
 .wrap-recommendkey li.total {
@@ -146,16 +170,26 @@ h1, h2, h3, h4, h5, h6 {
 	transform: translate(-50%, -50%);
 }
 img.cse {
-	display: block;
+	display: none;
 	width: 30%;
+}
+
+img.logo {
+	display:block;
+	width: 10%;
+	float: left;
+	margin: 1px;
+
+
 }
 
 .page {
 	margin-top: 50px;
 	text-align: center;
 	display: none;
-	width: 60%;
+	width: 90%;
 	float: left;
+	margin-left: 11%;	
 }
 .page button {
 	background-color: #cd1417;
