--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,15 +42,7 @@
   
   <div class="wrap-recommend">
 
-    <ul id="recommendkey">
-      <!-- <li class="total">Top 10 Key </li> -->
-      <!-- <%var i_key = 0;%>
-        <%for (var result in topkey){i_key++;%>
-          
-          <li class="item">#<%= i_key %>  
-                  <a href="#" onclick="topkey1('<%=topkey[result][0]%>')"  class="title" id="vegar"><%=topkey[result][0]%></a>
-         </li>   
-          <%}%> -->
+
        
 
         <ul id="recommend">
@@ -63,7 +55,7 @@
              </li>   
               <%}%> -->
             </ul>
-          </ul>
+          
 
             
 
@@ -75,9 +67,31 @@
 
 
 
+
   <div class="wrap-content">
     <ul id="results" />
   </div>
+
+  
+  <div class="wrap-recommendkey">
+
+    <ul id="recommendkey">
+      <!-- <li class="total">Top 10 Key </li> -->
+      <!-- <%var i_key = 0;%>
+        <%for (var result in topkey){i_key++;%>
+          
+          <li class="item">#<%= i_key %>  
+                  <a href="#" onclick="topkey1('<%=topkey[result][0]%>')"  class="title" id="vegar"><%=topkey[result][0]%></a>
+         </li>   
+          <%}%> --></ul>
+       
+          
+
+            
+
+      
+  </div> 
+
 
 
 
