--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
   <link href="//fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/loader.css">
   <link rel='stylesheet' href="/stylesheets/style.css">
+  <link rel='stylesheet' href="/stylesheets/autoacomplete.css">
 </head>
 
 <body>
@@ -111,6 +112,22 @@
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/javascripts/main.js"></script>
+  <script src="/javascripts/autocomplete.js"></script>
+
+
+
+  <% var key = []; %> 
+  <% for (var i = 0; i < keysearch.length; i++) { %>
+    
+            <% key.push(keysearch[i]);  %>
+            
+    <% } %>
+
+
+
+
+
+
   
 </body>
 </html>
