--- a/public/stylesheets/autoacomplete.css
+++ b/public/stylesheets/autoacomplete.css
@@ -32,6 +32,7 @@
   
   .autocomplete-items {
     position: absolute;
+    display: inline-block;
     border: 1px solid #d4d4d4;
     border-bottom: none;
     border-top: none;
@@ -40,6 +41,7 @@
     top: 100%;
     left: 16%;
     right: 16%;
+    margin-top: 0%;
   }
   
   .autocomplete-items div {
