--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="/stylesheets/loader.css">
   <link rel='stylesheet' href="/stylesheets/style.css">
   <link rel='stylesheet' href="/stylesheets/autoacomplete.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -23,7 +24,7 @@
   
   <div class="wrap-search">
     
-    <input type="text" placeholder="Input your key search here..." id="input-search">
+    <input autocomplete="off" type="text" placeholder="Input your key search here..." id="input-search">
     <img src="/images/search.png" alt="Search" class="search" id="img-search">
     <img src="/images/close.png" alt="Close" class="close" id="img-close">
     
@@ -34,11 +35,7 @@
 
 
   <a href="/" ><img src="/images/cse.png" alt="" class="logo" id="logo-outside"></a>
-  <!-- <div class="wrap-recommend"> -->
-    <!-- <p class="hotlink">Link hot: <a href="/" class="title" id="searchkey">nhac giang sinh VN - Fshare - Fshare</a> | <a href="/" class="title" id="searchkey">CAM LY VIDEO KARAOKE - Fshare - Fshare</a> | <a href="/" class="title" id="searchkey">One Piece - Vua bong da.mkv - Fshare</a> </p> -->
 
-    
-  <!-- </div> -->
 
   
   <div class="wrap-recommend">
@@ -47,14 +44,7 @@
        
 
         <ul id="recommend">
-          <!-- <li class="total">Top 10 Link </li> -->
-          <!-- <%var i_link = 0;%>
-            <%for (var result in toplink){i_link++;%>
-              
-              <li class="item">#<%= i_link %>  
-                      <a href="#" onclick="getLink('nokeysearch','<%=toplink[result][0]%>','<%=toplink[result][2]%>')" class="title" id="vegar"><%=toplink[result][2]%></a>
-             </li>   
-              <%}%> -->
+
             </ul>
           
 
@@ -77,14 +67,7 @@
   <div class="wrap-recommendkey">
 
     <ul id="recommendkey">
-      <!-- <li class="total">Top 10 Key </li> -->
-      <!-- <%var i_key = 0;%>
-        <%for (var result in topkey){i_key++;%>
-          
-          <li class="item">#<%= i_key %>  
-                  <a href="#" onclick="topkey1('<%=topkey[result][0]%>')"  class="title" id="vegar"><%=topkey[result][0]%></a>
-         </li>   
-          <%}%> --></ul>
+</ul>
        
           
 
@@ -108,26 +91,25 @@
     <div></div>
   </div>
 
-  <img src="/images/cse.png" alt="Fshare Search" class="cse" id="img-cse">
+  <div id="input-searchautocomplete-list" class="autocomplete-items"></div>
 
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <img src="/images/cse.png" alt="Fshare Search" class="cse" id="img-cse">
   <script src="/javascripts/main.js"></script>
   <script src="/javascripts/autocomplete.js"></script>
 
+  <span style="display: none;" id="key_value"><%= JSON.stringify(keysearch) %></span>
+  <script>
+    $( document ).ready(function() {
+      var key = $('#key_value').html(); 
+      //key = unescape(key);
+      key = JSON.parse(key);
+      autocomplete(document.getElementById("input-search"), key );
+    });
+  </script>
 
-
-  <% var key = []; %> 
-  <% for (var i = 0; i < keysearch.length; i++) { %>
     
-            <% key.push(keysearch[i]);  %>
-            
-    <% } %>
+    
 
-
-
-<script>
-  autocomplete(document.getElementById("input-search"),key );
-</script>
 
 
   
