--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,8 +23,19 @@
 
   
   <div class="wrap-search">
+
     
-    <input autocomplete="off" type="text" placeholder="Input your key search here..." id="input-search">
+    <div class="dropdown" id="cusSelectbox">
+      <select name="one" class="dropdown-select" id="cusSelectboxValue" >
+			<option value="">All</option>
+			<option value="inurl:fshare">Fshare</option>
+			<option value="inurl:hdvietnam">HDvietnam</option>
+    </select>
+    </div>
+
+    
+    <input autocomplete="off" type="text" placeholder="Input your key search here..." id="input-search" name="q">
+ 
     <img src="/images/search.png" alt="Search" class="search" id="img-search">
     <img src="/images/close.png" alt="Close" class="close" id="img-close">
     
@@ -97,16 +108,18 @@
   <script src="/javascripts/autocomplete.js"></script>
 
   <span style="display: none;" id="key_value"><%= JSON.stringify(keysearch) %></span>
+  <script src="/javascripts/main.js"></script>
   <script>
     $( document ).ready(function() {
       var key = $('#key_value').html(); 
       //key = unescape(key);
       key = JSON.parse(key);
       autocomplete(document.getElementById("input-search"), key );
+      if(currentPage){
+        currentPage = 'home';
+      }
     });
   </script>
-  <script src="/javascripts/main.js"></script>
-
     
     
 
