--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,8 @@
       <select name="one" class="dropdown-select" id="cusSelectboxValue" >
 			<option value="">All</option>
 			<option value="inurl:fshare">Fshare</option>
-			<option value="inurl:hdvietnam">HDvietnam</option>
+      <option value="inurl:hdvietnam">HDvietnam</option>
+      <option value="inurl:thuvienaz">ThuvienAZ</option>
     </select>
     </div>
 
