[Update] fix bugs

--- a/public/stylesheets/autoacomplete.css
+++ b/public/stylesheets/autoacomplete.css
@@ -9,7 +9,7 @@
   /*the container must be positioned relative:*/
   .autocomplete {
     position: relative;
-    display:contents;
+    display: inline;  
   }
   
   /* input {
