--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
 	width: 70%;
 	z-index: 0;
 	display: inline-block;
-	padding: 8px 130px;
+	padding: 8px 9%;
 	border-radius: 50px;
 	border: 2px solid rgb(88, 88, 88);
 	outline: none;
@@ -287,8 +287,8 @@ img.logo {
 	z-index: 1;
 	overflow: hidden;
 	height: 39px;
-	width: 6%;
-	background: #ffffff;
+	width: 8%;
+	background: #ffffff;	
 	/* padding: 8px 20px; */
 	border-radius: 50px;
 	border: 2px solid rgb(88, 88, 88);
@@ -302,6 +302,7 @@ img.logo {
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08); */
 	margin-top: 25%;
 	margin-left: 15%;
+	background: rgb(250, 250, 250);
   }
   
   .dropdown:before, .dropdown:after {
