--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,12 +36,25 @@
 
     
     <input autocomplete="off" type="text" placeholder="Input your key search here..." id="input-search" name="q">
+
+
+
+    
  
     <img src="/images/search.png" alt="Search" class="search" id="img-search">
     <img src="/images/close.png" alt="Close" class="close" id="img-close">
+
+
     
     
   </div>
+
+
+  <div class="top-detail">
+    <a onclick="topkeypage()" class="title" id="searchkey">Top Keysearch | Top Link</a>
+ 
+</div> 
+
 
 
 
@@ -51,18 +64,8 @@
 
   
   <div class="wrap-recommend">
-
-
-       
-
-        <ul id="recommend">
-
-            </ul>
-          
-
-            
-
-      
+      <ul id="recommend"></ul>
+   
   </div> 
 
 
@@ -72,21 +75,47 @@
 
 
   <div class="wrap-content">
-    <ul id="results" />
+     <ul id="results" />
   </div>
 
   
   <div class="wrap-recommendkey">
 
-    <ul id="recommendkey">
-</ul>
-       
-          
+    <ul id="recommendkey"></ul>
+</div> 
 
-            
+
+<div class="wrap-recommendkey-out">
 
       
-  </div> 
+  <ul id="recommend">
+
+    <li class="total">Top 10 Key Search | <a onclick="topkeypage()" class="title" id="searchkey">Week</a>	| <a onclick="topkeypage()" class="title" id="searchkey">Month</a>	| <a onclick="topkeypage()" class="title" id="searchkey">Year</a>	| <a onclick="topkeypage()" class="title" id="searchkey">All</a></li>
+    
+  <% for(var i=0; i < topkey.length; i++) { %>
+    <li class="item">#<%= topkey[i][2] %> 
+      <a onclick="topkey1('<%= topkey[i][0] %>','all')" class="title" id="searchkey"><%= topkey[i][0] %></a>
+  </li>
+  <% } %>
+</ul>
+</div>
+
+
+<div class="wrap-recommend-out">
+
+  
+  <ul id="recommend">
+
+    <li class="total">Top 10 Link | <a onclick="topkeypage()" class="title" id="searchkey">Week</a> | <a onclick="topkeypage()" class="title" id="searchkey">Month</a>	| <a onclick="topkeypage()" class="title" id="searchkey">Year</a>	| <a onclick="topkeypage()" class="title" id="searchkey">All</a></li>
+    
+  <% for(var i=0; i < toplink.length; i++) { %>
+    <li class="item">#<%= toplink[i][3] %> 
+      <a target="_blank" href="<%= toplink[i][0] %> " onclick="getLink('','<%= toplink[i][0] %> ','<%= toplink[i][2] %> ')" class="title" id="vegar"><%= toplink[i][2] %> </a>
+  </li>
+  <% } %>
+</ul>
+
+</div> 
 
 
 
