--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
 
 
   <div class="top-detail">
-    <a onclick="topkeypage('topkeyall','toplinkall')" class="title" id="searchkey">Top Keysearch | Top Link</a>
+    <a onclick="topkeypage()" class="title" id="searchkey">| Top Keysearch | Top Link |</a>
  
 </div> 
 
@@ -67,16 +67,19 @@
       <ul id="recommend"></ul>
    
   </div> 
+  
 
   <div class="wrap-content">
      <ul id="results" />
   </div>
 
-  
+    
   <div class="wrap-recommendkey">
 
     <ul id="recommendkey"></ul>
 </div> 
+
+
 
 
 
