--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,8 +63,8 @@
 
 
   
-  <div class="wrap-recommend">
-      <ul id="recommend"></ul>
+  <div class="wrap-recommendlink">
+      <ul id="recommendlink"></ul>
    
   </div> 
   
