--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
 
 
   <div class="top-detail">
-    <a onclick="topkeypage()" class="title" id="searchkey">| Top Keysearch | Top Link |</a>
+    <a onclick="updateViewOnTop()" class="title" id="searchkey">| Top Keysearch | Top Link |</a>
  
 </div> 
 
