--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
     
     <div class="dropdown" id="cusSelectbox">
       <select name="one" class="dropdown-select" id="cusSelectboxValue" >
-        <option value="">All</option>
+        <option value="">Tất cả</option>
         <option value="inurl:fshare">Fshare</option>
         <option value="inurl:hdvietnam">HDvietnam</option>
         <option value="inurl:thuvienhd">ThuvienHD</option>
@@ -35,7 +35,7 @@
     </div>
 
     
-    <input autocomplete="off" type="text" placeholder="Input your key search here..." id="input-search" name="q">
+    <input autocomplete="off" type="text" placeholder="Nhập vào từ khóa..." id="input-search" name="q">
 
 
 
@@ -51,7 +51,7 @@
 
 
   <div class="top-detail">
-    <a onclick="updateViewOnTop()" class="title" id="searchkey">| Top Keysearch | Top Link |</a>
+    <a onclick="updateViewOnTop()" class="title" id="searchkey">| Top Từ Khóa | Top Đường Link |</a>
  
 </div> 
 
@@ -87,8 +87,8 @@
 
 
   <div class="page" id="pagination">
-    <button class="prev" id="btn-prev">Previous</button>
-    <button class="next" id="btn-next">Next</button>
+    <button class="prev" id="btn-prev">Trang trước</button>
+    <button class="next" id="btn-next">Trang kế</button>
   </div>
   
   <div id="loader" style="color: #eb1a58" class="la-ball-climbing-dot la-3x loader">
