--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,7 +54,7 @@
 
 
   <div class="top-detail">
-   <a onclick="updateViewOnTop()" class="title" id="searchkey">Top Từ Khóa</a> | <a onclick="updateViewOnTop()" class="title" id="searchkey">Top Đường Link</a>
+   <a onclick="updateViewOnTop()" class="title" id="searchkey">Top Từ Khóa</a> | <a onclick="updateViewOnTop()" class="title" id="searchkey">Top Đường Link Hot</a>
 
   </div>
 
